<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_outline_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_multiselect"
        android:icon="@drawable/ic_outline_select_all"
        android:title="@string/tap_to_select"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_freeze_all"
        android:title="@string/action_freeze_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unfreeze_all"
        android:title="@string/action_unfreeze_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_clipboard"
        android:title="@string/action_import_clipboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_pin_shortcut"
        android:title="@string/action_add_pin_shortcut"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_dynamic_shortcut"
        android:title="@string/action_clear_dynamic_shortcut"
        app:showAsAction="never" />
</menu>